clickCounters work properly for each button, now to add cookies as in the code yknow

--- a/eatcookie.css
+++ b/eatcookie.css
@@ -43,9 +43,9 @@ button.chocolate {
 
 input {
 	border-style: none;
-	font-size: 30px;
-	width: 10%;
-	height: 10%;
+	font-size: 400%;
+	width: 20%;
+	height: 20%;
 }
 
 img {
